--- a/chromatique/composer.json
+++ b/chromatique/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
+        "fortawesome/font-awesome": "^6.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
